<resources>
    <string name="app_name">My college</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_logout">Logout</string>
    <string name="menu_home">Home</string>
    <string name="menu_syllabus">Syllabus</string>
    <string name="menu_about">About</string>
    <string name="menu_courses">Courses</string>
    <string name="menu_department">Department</string>
    <string name="menu_academic">Academic</string>
    <string name="menu_iqac">IQAC</string>
    <string name="menu_gymkhana">Gymkhana</string>
    <string name="menu_alumni">Alumni</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_contact_us">Contact us</string>
    <string name="menu_send">Send</string>
    <string name="menu_developers">feedback to developer </string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">College Dashboard</string>
    <string name="title_achivements">Achievements</string>
    <string name="title_updates">Updates</string>
    <string name="college_name">Basaveshwar Science College Bagalkot</string>
    <string name="about1">About BVVS Sanga\'s</string>
    <string name="about2">About College</string>
    <string name="courses1">UG Programs</string>
    <string name="courses2">PG Programs</string>
    <string name="courses3">Ph.D Programs</string>
    <string name="courses4">Diploma</string>
    <string name="courses5">Certificate Courses</string>
    <string name="department1">PG Department</string>
    <string name="department2">UG Department</string>
    <string name="academic1">Eximanition</string>
    <string name="academic2">Remedial Committee</string>
    <string name="academic3">Library</string>
    <string name="academic4">Anti-Ragging</string>
    <string name="academic5">Grievance cell</string>
    <string name="academic6">Attendance</string>
    <string name="iqac1">IQAC Message</string>
    <string name="iqac2">Principal Letter</string>
    <string name="iqac3">IQAC-members</string>
    <string name="iqac4">CPE</string>
    <string name="gymkhana1">Women Empoverment cell</string>
    <string name="gymkhana2">Sports</string>
    <string name="gymkhana3">NCC</string>
    <string name="gymkhana4">NSS</string>
    <string name="gymkhana5">Science Asociation</string>
    <string name="gymkhana6">Culture Activities</string>
    <string name="gymkhana7">Career Guidance and Placement cell</string>
    <string name="gymkhana8">BVVS Natural club</string>
    <string name="syllabus1">BCA</string>
    <string name="syllabus2">B.Sc</string>
    <string name="sem1">Semister I</string>
    <string name="sem2">Semister II</string>
    <string name="sem3">Semister III</string>
    <string name="sem4">Semister IV</string>
    <string name="sem5">Semister V</string>
    <string name="sem6">Semister VI</string>
    <string name="optsem1">B.Sc Statistics</string>
    <string name="optsem2">B,sc Sugar Science and Technology</string>
    <string name="optsem3">B.sc IV Computer Application</string>
    <string name="optsem4">IV Sem Kannada</string>
    <string name="optsem5">personality and communication skill</string>
    <string name="optsem6">III Sem Statisics (Optional)</string>
    <string name="optsem7">Indian Constitution</string>
    <string name="optsem9">V Sem Zoology (Optional) </string>
    <string name="ugprogram1">BSc (Physics, Chemistry,Mathematics)</string>
    <string name="ugprogram2">BSc (Chemistry,Botany,Zoology)</string>
    <string name="ugprogram3">BSc (Physics, Statistics,Mathematics)</string>
    <string name="ugprogram4">BSc (Physics,Mathematics,Electronics)</string>
    <string name="ugprogram5">BSc (Physics,Mathematics,CS)</string>
    <string name="ugprogram6">BSc (Chemistry, Botany, Biotechnology)</string>
    <string name="ugprogram7">BSc (Microbiology, Chemistry,Zoology)</string>
    <string name="ugprogram8">BSc (CS, Mathematics,Electronics)</string>
    <string name="ugprogram9">BSc (CS,Mathematics, Statistics)</string>
    <string name="ugprogram10">BCA (Computer Application)</string>
    <string name="ugprogram11">BSc (Computer Science)</string>
    <string name="pgprogram1">PGDCA(PG Diploma)</string>
    <string name="pgprograms2">M.sc Mathematics</string>
    <string name="pgprograms3">M.sc Chemistry</string>
    <string name="pgprograms4">M.sc Physics</string>
    <string name="pgprograms5">M.sc Computer Science</string>
    <string name="diploma1">DMLTC</string>
    <string name="phdprograms1">Ph.D(Physics)</string>
    <string name="cc1">Computer Literary Program</string>
    <string name="cc2">NPTEL</string>
    <string name="cc3">Spoken English</string>
    <string name="cc4">Human Values</string>
    <string name="cc5">Yoga</string>
    <string name="ugd1">Physics</string>
    <string name="ugd2">Chemistry</string>
    <string name="ugd3">Mathematics</string>
    <string name="ugd4">Botany</string>
    <string name="ugd5">Zoology</string>
    <string name="ugd6">Statistics</string>
    <string name="ugd7">Computer Science</string>
    <string name="ugd8">Electronics</string>
    <string name="ugd9">Microbiology</string>
    <string name="ugd10">Biotechnology</string>
    <string name="ugd11">Languages</string>
    <string name="members">Members</string>
    <string name="staff">Staff List</string>
    <string name="staff_list">Staff List</string>
    <string name="staff_note">* Click on the lectuere names to write a email or to communicate with them</string>
    <string name="Home_about">
        The Basaveshwar Science College is one of the prestigious institutes of Basaveshwar Veerashaiva Vidyavardhaka Sangha,
        Bagalkot which was founded by His Holiness Shri Gurubasava Mahaswamiji of Bilur in the year 1906, with the opening of a Sanskrit Patashala.\n\n
        It provided the impetus that propelled a sleepy little town into an Educational, Commercial and Industrial hub of this backward area of
        Karnataka state.\n "
    </string>
    <string name="home_mission">
        Basaveshwar Science College aims at imparting quality education to develop Self-Reliant and Responsible citizens.
        It is committed to provide the best learning and working environment in the fields of Science and Information Technology to cater the needs of
        all stakeholders to achieve excellence. The college is committed to achieve the overall development of the students and to improve
        career guidance. Social service and Rural development are also embedded in social activities.\n
     </string>
    <string name="home_orgin">Runs under the patronage of B.V.V Sangha, the college assumed its distinctive individuality in 1967, when it separated
        itself from Basaveshwar Arts College. From 1944 to 1967 it was a part of the Composite Science College along with the Pre-University Science
        course. During this period it was set on the path of development under the able guidance of a distinguished acadamecian Dr. S.C. Nandimath, a
        post-graduate and research awardee from London University.
        With its inaugural in 1967 by then Vice President of India, His Excellency Sri V. V. Giri, the administration was taken over by the founder
        Principal, Prof. B.C. Akki, who continued on the path of excellence charted by Dr. S.C. Nandimath. Basaveshwar Science College has adopted
        modern academic curriculum as per the requirements of the under-graduate and post graduate streams. Inputs from various resources regarding
        knowledge and training for employment has resulted into a modified positive study programme, updated to aid employment.\n
    </string>
    <string name="core_values">
        1) Leadership.\n\n
        2) Critical thinking and problem solving.\n\n
        3) Encouraging and building student ability, character and creativity.\n\n
        4) Ethics: We believe in acting with honesty, courage, and trustworthiness\n\n
        5) We value an institutional attitude and culture that promotes and supports total health and wellness of staff and students.\n\n
        6) Excellence: Maintain a high standard of integrity and performance leading to the achievement of academic and professional goals.\n\n
    </string>
    <string name="about_grievance">
        \nThe main objective of the Students Counseling and Grievance Redressal Cell is to develop a responsible and positive attitude among students in order to maintain a harmonious
        educational atmosphere in Basaveshwar Science College Campus. The main function of the cell is to look into the complaints lodged by students on various issues, and judge it based on
        various merits. The Grievance cell is also empowered to look into matters of harassment. Anyone with a genuine grievance may approach the department members in person, or in consultation
        with the officer in-charge Students’ Grievance Cell. In case the person is unwilling to appear in self, grievances may be dropped in writing at the suggestion box of the Grievance Cell at
        Administrative Block. Grievances may also be sent through e-mail to the officer in-charge of Students’ Grievance Cell.\nStudents are requested to note that making a complaint is serious
        and therefore they are to use this power in a responsible manner. At the same time, the college assures students that once a complaint is made, it will be treated with sensitivity and
        confidentiality.\n
    </string>
    <string name="grievance_members">
        \n\nSri. S. A. Bhusanurmath Student Welfare Officer and Chairman of Grievance Cell\n\n
        Dr. B. N. Kirasur\n
        Sri. S. B. Goudar\n
        Dr. D. S. Lamani\n
        Smt. J. B. Uppin\n
        Smt. Nirmal Telkar\n
        Smt. R.I. Saudagar\n
        Miss. NetravatiHireholi\n
    </string>
</resources>