<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".Grievance_cell">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_margin="12sp"
        app:cardCornerRadius="12sp"
        app:cardElevation="60sp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:layout_marginStart="20dp"
            android:text="@string/menu_about"
            android:textColor="@color/title"
            android:textSize="20sp" />

        <me.biubiubiu.justifytext.library.JustifyTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginTop="30sp"
            android:text="@string/about_grievance" />

    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_columnWeight="1"
        android:layout_margin="12sp"
        app:cardCornerRadius="12sp"
        app:cardElevation="60sp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/members"
            android:textSize="20sp"
            android:layout_marginTop="10sp"
            android:layout_marginStart="20dp"
            android:textColor="@color/title"/>

        <me.biubiubiu.justifytext.library.JustifyTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginTop="20sp"
            android:text="@string/grievance_members"/>

    </androidx.cardview.widget.CardView>

    </LinearLayout>

</ScrollView>