<?xml version="1.0" encoding="utf-8"?>
<ScrollView

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".Ug_departments">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/ugd1"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_columnWeight="1"
            android:layout_margin="12sp"
            app:cardCornerRadius="12sp"
            app:cardElevation="60sp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ugd1"
                android:textSize="30sp"
                android:textColor=" #FF0AD312"
                android:layout_marginStart="60dp"
                android:layout_marginTop="30dp"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/ugd2"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_columnWeight="1"
            android:layout_margin="12sp"
            app:cardCornerRadius="12sp"
            app:cardElevation="60sp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ugd2"
                android:textSize="30sp"
                android:textColor=" #FF0AD312"
                android:layout_marginStart="60dp"
                android:layout_marginTop="30dp"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/ugd3"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_columnWeight="1"
            android:layout_margin="12sp"
            app:cardCornerRadius="12sp"
            app:cardElevation="60sp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ugd3"
                android:textSize="30sp"
                android:textColor=" #FF0AD312"
                android:layout_marginStart="60dp"
                android:layout_marginTop="30dp"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/ugd4"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_columnWeight="1"
            android:layout_margin="12sp"
            app:cardCornerRadius="12sp"
            app:cardElevation="60sp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ugd4"
                android:textSize="30sp"
                android:textColor=" #FF0AD312"
                android:layout_marginStart="60dp"
                android:layout_marginTop="30dp"/>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/ugd5"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_columnWeight="1"
            android:layout_margin="12sp"
            app:cardCornerRadius="12sp"
            app:cardElevation="60sp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginTop="30dp"
                android:text="@string/ugd5"
                android:textColor=" #FF0AD312"
                android:textSize="30sp" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/ugd6"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_columnWeight="1"
            android:layout_margin="12sp"
            app:cardCornerRadius="12sp"
            app:cardElevation="60sp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ugd6"
                android:textSize="30sp"
                android:textColor=" #FF0AD312"
                android:layout_marginStart="60dp"
                android:layout_marginTop="30dp"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/ugd7"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_columnWeight="1"
            android:layout_margin="12sp"
            app:cardCornerRadius="12sp"
            app:cardElevation="60sp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ugd7"
                android:textSize="30sp"
                android:textColor=" #FF0AD312"
                android:layout_marginStart="60dp"
                android:layout_marginTop="30dp"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/ugd8"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_columnWeight="1"
            android:layout_margin="12sp"
            app:cardCornerRadius="12sp"
            app:cardElevation="60sp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ugd8"
                android:textSize="30sp"
                android:textColor=" #FF0AD312"
                android:layout_marginStart="60dp"
                android:layout_marginTop="30dp"/>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/ugd9"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_columnWeight="1"
            android:layout_margin="12sp"
            app:cardCornerRadius="12sp"
            app:cardElevation="60sp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ugd9"
                android:textSize="30sp"
                android:textColor=" #FF0AD312"
                android:layout_marginStart="60dp"
                android:layout_marginTop="30dp"/>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/ugd10"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_columnWeight="1"
            android:layout_margin="12sp"
            app:cardCornerRadius="12sp"
            app:cardElevation="60sp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ugd10"
                android:textSize="30sp"
                android:textColor=" #FF0AD312"
                android:layout_marginStart="60dp"
                android:layout_marginTop="30dp"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/ugd11"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_columnWeight="1"
            android:layout_margin="12sp"
            app:cardCornerRadius="12sp"
            app:cardElevation="60sp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ugd11"
                android:textSize="30sp"
                android:textColor=" #FF0AD312"
                android:layout_marginStart="60dp"
                android:layout_marginTop="30dp"/>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</ScrollView>