<?xml version="1.0" encoding="utf-8"?>
<ScrollView

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".Ug_programs">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/ug1"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_columnWeight="1"
            android:layout_margin="12sp"
            app:cardCornerRadius="12sp"
            app:cardElevation="60sp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ugprogram1"
                android:textSize="25sp"
                android:textColor=" #FF0AD312"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"/>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/ug2"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_columnWeight="1"
            android:layout_margin="12sp"
            app:cardCornerRadius="12sp"
            app:cardElevation="60sp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ugprogram2"
                android:textSize="25sp"
                android:textColor=" #FF0AD312"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/ug3"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_columnWeight="1"
            android:layout_margin="12sp"
            app:cardCornerRadius="12sp"
            app:cardElevation="60sp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ugprogram3"
                android:textSize="25sp"
                android:textColor=" #FF0AD312"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/ug4"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_columnWeight="1"
            android:layout_margin="12sp"
            app:cardCornerRadius="12sp"
            app:cardElevation="60sp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ugprogram4"
                android:textSize="25sp"
                android:textColor=" #FF0AD312"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"/>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/ug5"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_columnWeight="1"
            android:layout_margin="12sp"
            app:cardCornerRadius="12sp"
            app:cardElevation="60sp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ugprogram5"
                android:textSize="25sp"
                android:textColor=" #FF0AD312"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/ug6"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_columnWeight="1"
            android:layout_margin="12sp"
            app:cardCornerRadius="12sp"
            app:cardElevation="60sp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ugprogram6"
                android:textSize="25sp"
                android:textColor=" #FF0AD312"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/ug7"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_columnWeight="1"
            android:layout_margin="12sp"
            app:cardCornerRadius="12sp"
            app:cardElevation="60sp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ugprogram7"
                android:textSize="25sp"
                android:textColor="#FF0AD312"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/ug8"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_columnWeight="1"
            android:layout_margin="12sp"
            app:cardCornerRadius="12sp"
            app:cardElevation="60sp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ugprogram8"
                android:textSize="25sp"
                android:textColor=" #FF0AD312"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"/>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/ug9"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_columnWeight="1"
            android:layout_margin="12sp"
            app:cardCornerRadius="12sp"
            app:cardElevation="60sp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ugprogram9"
                android:textSize="25sp"
                android:textColor=" #FF0AD312"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"/>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/ug10"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_columnWeight="1"
            android:layout_margin="12sp"
            app:cardCornerRadius="12sp"
            app:cardElevation="60sp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ugprogram10"
                android:textSize="25sp"
                android:textColor=" #FF0AD312"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/ug11"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_columnWeight="1"
            android:layout_margin="12sp"
            app:cardCornerRadius="12sp"
            app:cardElevation="60sp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ugprogram11"
                android:textSize="25sp"
                android:textColor=" #FF0AD312"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"/>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</ScrollView>